<resources>
    <string name="app_name">monsterrun</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_conf_password">Confirmation password</string>
    <string name="prompt_gender">Gender</string>
    <string name="prompt_nickname">Nickname</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>


    /* Activity Register */
    <string name="missing_register_fields">The following field(s) are empty: </string>
    <string name="textViewregister">Register</string>
    <string name="textViewemail">Email:</string>
    <string name="textViewgender">Gender:</string>
    <string name="textViewpass">Password:</string>
    <string name="textViewrtpass">Retype Password:</string>
    <string name="textViewnick">Nickname:</string>
    <string name="textViewdifficulty">Starting Difficulty:</string>
    <string name="textVieweasy">Easy</string>
    <string name="textVieweasydesc">1 to 8,000 steps a day</string>
    <string name="textViewmedium">Medium</string>
    <string name="textViewmediumdesc">8,000 to 12,000 setps a day</string>
    <string name="textViewhard">Hard</string>
    <string name="textViewharddesc">12,000 or more steps a day</string>

    /* Activity Settings */
    <string name="textViewsettings">Settings</string>
    <string name="textViewsound">Sound Effects:</string>
    <string name="textViewoffers">Personalized Offers:</string>
    <string name="textViewfacebook">Connect to Facebook:</string>
    <string name="textViewlang">Languages:</string>
    <string name="textViewnickname">Nickname:</string>


    <string name="help_and_support_button">Help and Support</string>
    <string name="notifications_button">Notifications</string>
    <string name="privacy_button">Privacy</string>
    <string name="update_button">Update</string>
    <string name="terms_of_service_button">Terms of Service</string>
    <string name="delete_account_button">Delete Account</string>
    <string name="rate_this_app_button">Rate This App</string>


    /* Activity Inventory */
    <string name="textViewItemshop">ITEM SHOP</string>
    <string name="textViewYouritems">YOUR ITEMS</string>
    <string name="textViewSquirrel">mangy squirrel</string>
    <string name="textViewStick">pointy stick</string>
    <string name="textViewBoot">dusty boot</string>
    <string name="textViewRagequit">rage quit</string>
    <string name="textViewQuantityPlaceholder1">Quantity: 2</string>
    <string name="textViewQuantityPlaceholder2">Quantity: 1</string>
    <string name="textViewQuantityPlaceholder3">Quantity: 1</string>
    <string name="buttonBuyPlaceholder1">BUY</string>
    <string name="buttonBuyPlaceholder2">BUY</string>
    <string name="buttonBuyPlaceholder3">BUY</string>
    <string name="buttonBuyPlaceholder4">BUY</string>
    <string name="buttonUsePlaceholder1">USE</string>
    <string name="buttonUsePlaceholder2">USE</string>
    <string name="buttonUsePlaceholder3">USE</string>

    /* Activity Login */
    <string name="textViewEmail">EMAIL:</string>
    <string name="textViewPassword">PASSWORD:</string>
    <string name="buttonRegister">Register</string>
    <string name="register_link">Don\'t have an account? Tap here</string>
    <string name="buttonLogIn">Log In</string>

    /* Activity Statistics */
    <string name="yourActivityStatistics">Your Activity Statistics</string>
    <string name="goal_center">Goal Center</string>

    <string name="daily_data_button">Daily Data</string>
    <string name="weekly_data_statistics_button">Weekly Data</string>
    <string name="monthly_data_button">Monthly Data</string>

    <string name="statistics_img">statistics img</string>
    <string name="statistics_graph_placeholder">statistics graph placeholder</string>

    /* Activity Main */
    <string name="buttonInventory">Inventory</string>
    <string name="buttonTimeremaining">Time Remaining</string>
    <string name="buttonLogOut">Log Out</string>
    <string name="buttonLeaderboard">Leaderboard</string>
    <string name="textViewMonstertitle">monster activity titles</string>
    <string name="textViewMonsterdescriptions">monster activity descriptions</string>
    <string name="buttonSettings">Settings</string>

    /* Item Fragment */
    <string name="TextViewRageQuit">Rage Quit</string>
    <string name="TextViewRageQuitDescription">Rage Quit Description</string>
    <string name="buttonRageQuitBuy">BUY</string>


    <string name="TextViewSquirrel">Mangy Squirrel</string>
    <string name="TextViewSquirrelDescription">Mangy Squirrel Description</string>
    <string name="buttonSquirrelBuy">BUY</string>


    <string name="TextViewSpeedyJuice">Speedy Juice</string>
    <string name="TextViewSpeedyJuiceDescription">Speedy Juice Description</string>
    <string name="buttonSpeedyJuiceBuy">BUY</string>


    <string name="TextViewStick">Pointy Stick</string>
    <string name="TextViewStickDescription">Pointy Stick Description</string>
    <string name="buttonStickBuy">BUY</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>