<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ItemFragment">

    <TextView
        android:id="@+id/item_name"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginStart="24dp"
        android:text="@string/TextViewRageQuit"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/item_image"
        app:layout_constraintTop_toTopOf="@+id/item_image" />

    <ImageView
        android:id="@+id/item_image"
        android:layout_width="@dimen/item_fragment_width"
        android:layout_height="@dimen/item_fragment_height"
        android:layout_marginStart="24dp"
        android:src="@drawable/controllerrrrr"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/item_desc"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/TextViewRageQuitDescription"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/item_name"
        app:layout_constraintTop_toBottomOf="@+id/item_name" />

    <Button
        android:id="@+id/buy_button"
        android:layout_width="81dp"
        android:layout_height="48dp"
        android:layout_marginEnd="4dp"
        android:text="@string/buttonRageQuitBuy"
        app:layout_constraintBottom_toBottomOf="@+id/item_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/item_desc"
        app:layout_constraintTop_toTopOf="@+id/item_image"
        app:layout_constraintVertical_bias=".5" />


</androidx.constraintlayout.widget.ConstraintLayout>