<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/monster_run_logo" />

    <EditText
        android:id="@+id/editTextTextEmailAddress2"
        android:layout_width="252dp"
        android:layout_height="49dp"
        android:layout_marginTop="104dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <EditText
        android:id="@+id/editTextTextPassword3"
        android:layout_width="253dp"
        android:layout_height="42dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextEmailAddress2"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress2" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="86dp"
        android:layout_height="28dp"
        android:text="@string/textViewEmail"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextTextEmailAddress2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editTextTextEmailAddress2"
        app:layout_constraintVertical_bias="0.571" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="119dp"
        android:layout_height="36dp"
        android:text="@string/textViewPassword"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextTextPassword3"
        app:layout_constraintStart_toStartOf="@+id/textView14"
        app:layout_constraintTop_toTopOf="@+id/editTextTextPassword3" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="132dp"
        android:layout_height="69dp"
        android:layout_marginTop="76dp"
        android:backgroundTint="@color/design_default_color_error"
        android:text="@string/buttonLogIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword3" />

    <TextView
        android:id="@+id/register_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/register_link"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>