<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ItemFragmentStick">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView21"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="88dp"
            android:text="@string/TextViewStick"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/imageView12"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:text="@string/TextViewStickDescription"
            android:textAppearance="@style/TextAppearance.AppCompat.Display3"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/textView21"
            app:layout_constraintTop_toBottomOf="@+id/textView21" />

        <Button
            android:id="@+id/button"
            android:layout_width="81dp"
            android:layout_height="48dp"
            android:layout_marginTop="68dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="72dp"
            android:text="@string/buttonStickBuy"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.611" />

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="@dimen/item_fragment_width"
            android:layout_height="@dimen/item_fragment_height"
            android:layout_marginStart="16dp"
            android:layout_marginTop="88dp"
            android:src="@drawable/good_stick"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>